<resources>
    <string name="app_name">Exercises</string>
    <string name="letter_name">A</string>
    <string name="first_name">firstName</string>
    <string name="last_name">lastName</string>
    <string name="phone">phoneNumber</string>
    <string name="image_user">UserImage</string>
    <string name="image_edit">EditImage</string>
    <string name="image_delete">DeleteImage</string>
    <string name="generate_phone_book">Generate new Phone Book</string>
    <string name="phone_book_db">Show Phone Book from DataBase</string>
    <string name="save_book_db">Save to DataBase</string>
    <string name="tb_start_screen">START SCREEN</string>
    <string name="tb_db_screen">DATA BASE SCREEN</string>
    <string name="tb_new_book_screen">NEW PHONE BOOK SCREEN</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="ADD">ADD</string>

</resources>