<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_letter"
        android:layout_width="@dimen/letter_size"
        android:layout_height="@dimen/letter_size"
        android:layout_margin="@dimen/letter_margin"
        android:gravity="center"
        android:text="@string/letter_name"
        android:textSize="@dimen/letter_text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_margin="@dimen/general_user_margin">

        <ImageView
            android:id="@+id/iv_user_image"
            android:contentDescription="@string/image_user"
            android:layout_width="@dimen/user_image_size"
            android:layout_height="@dimen/user_image_size"
            android:src="@drawable/ic_person_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/user_info_padding"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/tv_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <TextView
                android:id="@+id/tv_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/ll_edit_user_margin"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_edit"
                android:layout_margin="@dimen/iv_edit_delete_margin"
                tools:ignore="NestedWeights"
                android:src="@drawable/ic_edit_24"/>

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/image_delete"
                android:layout_margin="@dimen/iv_edit_delete_margin"
                android:src="@drawable/ic__delete_24"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_separate_line_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separate_line_height"
        android:layout_marginTop="@dimen/separate_line_margin"
        android:background="@color/black" />

</LinearLayout>