<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:ignore="MissingConstraints"
        android:background="@color/my_blue">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tb_start_screen"
            android:textStyle="bold"
            android:textSize="@dimen/tb_size"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btn_generate_phone_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/generate_phone_book"
        android:textSize="@dimen/button_text_size"
         />

    <Button
        android:id="@+id/btn_phone_book_from_bd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_generate_phone_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/phone_book_db"
        android:textSize="@dimen/button_text_size"
        />

</androidx.constraintlayout.widget.ConstraintLayout>